[package]
name = "indexly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.2", features = ["derive"] }
ethereum_abi = "0.4.0"
graphql-parser = "0.4.0"
handlebars = "4.3.6"
include_dir = "0.7.3"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
serde_yaml = "0.9.19"
