[package]
name = "envio"
version = "0.0.1-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.2", features = ["derive", "env"] }
clap-markdown = { version = "0.1.0" }
ethers = "2.0.14"
graphql-parser = "0.4.0"
handlebars = "6.0.0"
include_dir = "0.7.3"
inquire = "0.6.1"
pathdiff = "0.2.1"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
serde_yaml = "0.9.19"
regex = "1.5"
reqwest = "0.11"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
tokio = { version = "1.28.2", features = [
  "macros",
  "process",
  "rt-multi-thread",
  "time",
] }
anyhow = "1.0.72"
sha2 = "0.10.7"
open = "5.0.0"
subenum = "1.1.1"
async-recursion = "1.0.5"
itertools = "0.11.0"
colored = "2.0.4"
sqlx = { version = "0.7.2", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
] }
thiserror = "1.0.50"
fuel-abi-types = "0.7.0"
schemars = { version = "1.0.0-alpha.2", features = ["preserve_order"] }
convert_case = "0.6.0"
dotenvy = { git = "https://github.com/enviodev/dotenvy", rev = "e2da110668572cf2d67178f192eb1fc285224040" }

[dev-dependencies]
tempdir = "0.3"
paste = "1.0.12"
tracing-subscriber = "0.3.17"
pretty_assertions = "1.4.0"

# NOTE: this is needed for aarch64 linux, since linking of openssl has caused issues via the package manager
#       See here for this workaround: https://docs.rs/openssl/latest/openssl/#vendored
#   It should be possible to use a linked version of openssl, but after hours of trying I (Jason) was unsuccessful.
[target.'cfg(all(target_arch = "aarch64", target_os = "linux"))'.dependencies]
openssl = { version = "0.10.63", features = ["vendored"] }

[target.'cfg(all(target_arch = "x86_64", target_os = "linux"))'.dependencies]
openssl = { version = "0.10.63", features = ["vendored"] }
