[package]
name = "envio"
version = "0.0.1-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
clap-markdown = { version = "0.1.5" }
# Alloy crates for ABI parsing (replacing deprecated ethers-rs)
alloy-primitives = "1.5"
alloy-json-abi = "1.5"
alloy-dyn-abi = "1.5"
graphql-parser = "0.4.1"
handlebars = "6.4"
include_dir = "0.7.4"
inquire = "0.6.1"
pathdiff = "0.2.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.19"
regex = "1.12"
reqwest = { version = "0.11", features = ["json"] }
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
tokio = { version = "1.49", features = [
  "macros",
  "process",
  "rt-multi-thread",
  "time",
] }
anyhow = "1.0.101"
sha2 = "0.10.8"
open = "5.3"
subenum = "1.1.3"
async-recursion = "1.1"
itertools = "0.11.0"
colored = "2.0.4"
sqlx = { version = "0.7.2", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
] }
thiserror = "1.0.50"
fuel-abi-types = "0.7.0"
schemars = { version = "=1.0.0-alpha.2", features = ["preserve_order"] }
convert_case = "0.6.0"
dotenvy = { git = "https://github.com/enviodev/dotenvy", rev = "e2da110668572cf2d67178f192eb1fc285224040" }

[dev-dependencies]
tempdir = "0.3.7"
paste = "1.0.15"
tracing-subscriber = "0.3.22"
pretty_assertions = "1.4.1"
insta = "1.46"

# NOTE: this is needed for aarch64 linux, since linking of openssl has caused issues via the package manager
#       See here for this workaround: https://docs.rs/openssl/latest/openssl/#vendored
#   It should be possible to use a linked version of openssl, but after hours of trying I (Jason) was unsuccessful.
[target.'cfg(all(target_arch = "aarch64", target_os = "linux"))'.dependencies]
openssl = { version = "0.10.75", features = ["vendored"] }

[target.'cfg(all(target_arch = "x86_64", target_os = "linux"))'.dependencies]
openssl = { version = "0.10.75", features = ["vendored"] }
